# avs3a

./: CMakeLists.txt
.github/workflows/: avs3aWindowsx86.yml  c-cpp.yml
include/: Version.h  avs3_cnst_com.h  avs3_decoder_interface.h  decoder.h  gcc_Debug.h  gcc_Release.h  model.h
src/: decoder.c  vmfwindowex.h
